@@ -217,33 +217,38 @@ The script selectors point to the according files.
     >>> print f.read()
     <html><head><script>
     ...
-    O(["true","ie6"],"mypackage.index.ie6.fcf9ac32abb223b15256e5ab8c0641fc.cache.html");
-    O(["true","mozilla"],"mypackage.index.mozilla.ca2f722974ea204cf544504eaaf467f1.cache.html");...
+    O(["true","ie6"],"mypackage.index.ie6.2da78b3ac76b1a1c9879e3e8a9997eb0.cache.html");
+    O(["true","mozilla"],"mypackage.index.mozilla.1b658fcd34b8f530360aa5de3cd9e8c3.cache.html");...
 
     >>> from pprint import pprint
     >>> pprint(sorted(os.listdir(output)))
     ['...
-     'mypackage.index.ie6.fcf9ac32abb223b15256e5ab8c0641fc.cache.html',
-     'mypackage.index.mozilla.ca2f722974ea204cf544504eaaf467f1.cache.html',
+     'mypackage.index.ie6.2da78b3ac76b1a1c9879e3e8a9997eb0.cache.html',...
+     'mypackage.index.mozilla.1b658fcd34b8f530360aa5de3cd9e8c3.cache.html',
      ...']
 
 Also the libfiles which are generated from multifile option are upated.
 
     >>> op = os.path.join(
-    ...     output, 'mypackage.index.ie6.fcf9ac32abb223b15256e5ab8c0641fc.cache.html')
+    ...     output, 'mypackage.index.ie6.2da78b3ac76b1a1c9879e3e8a9997eb0.cache.html')
     >>> f = file(op)
     >>> print f.read()
     <html>...
     <script type="text/javascript" src="_pyjs.js"></script>
     <script type="text/javascript" src="sprintf.js"></script>
-    <script ...src="lib/pyjslib.a3a580694ab1a1a84c7794fdd996644f.js"></script>
-    <script ...src="lib/mypackage.f739f311158b12902d5a104067d5ae18.js"></script>
+    <...pyjslib.1ce8d8c93ffffe9229371680311c5dea.js"></script>
+    <...mypackage.f739f311158b12902d5a104067d5ae18.js"></script>
+    <...mypackage.index.a730245b822aece5d56373f0c460e55b.js"></script>...
+
+
+    <script ...src="lib/pyjslib.2da78b3ac76b1a1c9879e3e8a9997eb0.js"></script>
+    <script ...src="lib/mypackage.2da78b3ac76b1a1c9879e3e8a9997eb0.js"></script>
     <script ...src="lib/mypackage.index.a730245b822aece5d56373f0c460e55b.js">...
 
     >>> pprint(sorted(os.listdir(os.path.join(output, 'lib'))))
     ['mypackage.f739f311158b12902d5a104067d5ae18.js',...
      'mypackage.index.a730245b822aece5d56373f0c460e55b.js',...
-     'pyjslib.__mozilla__.ad9c4781d3571d0e462ace61b25970ba.js',...
+     'pyjslib.__mozilla__.c6a71e6bbb64dd3d5a07d1f65cfdda3a.js',...
 
 Overrides
 ---------
